--- a/style.css
+++ b/style.css
@@ -1,37 +1,15 @@
-.container {
-  width: 600px;
-  margin: 0 auto;
-  padding: 30px;
-}
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.list-item {
-  background-color: palegreen;
-  padding: 10px;
+.btns button {
+  padding: 8px 14px;
+  border: none;
+  background-color: blueviolet;
   border-radius: 3px;
-  margin: 5px 0;
+  margin: 10px 5px;
+  color: white;
 }
-.list-item h2 {
-  margin: 0;
+.btns {
+  width: 300px;
+  margin: 0 auto;
 }
-.box {
-  position: relative;
-  width: 200px;
-  height: 200px;
-}
-.circle {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-.left {
-  left: -5px;
-}
-.right {
-  right: +5px;
+button:focus {
+  outline: none;
 }
